1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 512Mi
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "echo '<h1>Hello World - CGI Challenge - OLSC</h1>' > /usr/share/nginx/html/index.html"]
