5b-allow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-helloworld
  namespace: app-1
spec:
  podSelector:
    matchLabels:
      app: hello-world
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-basic
    ports:
    - protocol: TCP
      port: 80
